v2-k8s/grafana-sub-ingress.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # annotations:
  #   kubectl.kubernetes.io/last-applied-configuration: |
  #     {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{},"name":"grafana","namespace":"monitoring"},"spec":{"rules":[{"host":"grafana.192.168.11.10.nip.io","http":{"paths":[{"backend":{"serviceName":"grafana","servicePort":"http"},"path":"/"}]}}],"tls":[{"hosts":["grafana.192.168.11.10.nip.io"]}]}}
  # creationTimestamp: "2021-11-07T09:17:59Z"
  # generation: 1
  name: grafana
  namespace: monitoring
  # resourceVersion: "5476"
  # uid: 3530677b-382f-42ed-9d45-f5f9c72e9f8b
spec:
  rules:
  - host: 192.168.11.10/grafana
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - 192.168.11.10/grafana
status:
  loadBalancer:
    ingress:
    - ip: 192.168.11.10
