v2-k8s/homelab-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb-ingress
  namespace: homelab
spec:
  rules:
    - host: influxdb.192.168.11.10.nip.io
      http:
        paths:
          - backend:
              service:
                name: influxdb
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
      - influxdb.192.168.11.10.nip.io
status:
  loadBalancer:
    ingress:
    - ip: 192.168.11.10
